methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:20: error: Unit does not take parameters
		dogHouse();
                        ^MethodsDogHouse:26: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:36: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:46: error: Unit does not take parameters
		dogHouse();		
                        ^